--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
 name: Generate Snake
 
+permissions:
+  contents: write  # Ensure write permissions for pushing changes
+
 # Controls when the action will run.
 on:
   schedule:
@@ -10,7 +13,7 @@ on:
   # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
   
-  # Also run on every push on the master branch
+  # Also run on every push on the main branch
   push:
     branches:
     - main
@@ -24,7 +27,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Clone repo
+      - name: Checkout repository content
         uses: actions/checkout@v3
     
       - name: Generate the snake files in './dist/'
@@ -32,21 +35,38 @@ jobs:
         id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-            dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
         env:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Verify output directory
+        run: |
+          mkdir -p dist
+          ls dist
+      
+      - name: Configure Git user
+        run: |
+          git config --global user.email "hemanthnaika22@gmail.com"
+          git config --global user.name "hemanthnaika"
+
+      - name: Create `output` branch if it doesn't exist
+        run: |
+          git fetch origin
+          git checkout -b output || git checkout output
 
       - name: Show build status
         run: git status
 
-      - name: Push new files to the output branch
+      - name: Push new snake files to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          target_branch: output
-          build_dir: dist
-          commit_message: Update snake animations
+          target_branch: output  # The branch to push to
+          build_dir: dist  # Directory containing the snake output
+          commit_message: "Update snake animation"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Debug Git
+        run: |
+          git remote -v
+          git branch
+          git status
